...
    <string name="map_button">Map</string>
    <string name="sign_in_button">Sign In</string>
    <string name="sign_out_button">Sign Out</string>
    <string name="sign_up_button">Sign Up</string>

    <!-- USERNAME CHOICE -->
    <string name='already_existing_username'>The username is already used by another user. Choose a new one.</string>
    <string name='invalid_username'>The username is not valid. It must contain between 3 and 15 alphanumeric characters.</string>
    <string name='current_username'>You can\'t choose the username you already have!</string>
    <string name='available_username'>Your username has changed!</string>
    <string name='insert_username_button'>Insert your username here</string>
    <string name='change_username_button'>Change username</string>
    <string name='submit_username_button'>Change</string>
    <string name='registered_username'>Welcome to PeakAR community!</string>
    <string name='database_fail'>Oops, an error occurred. Make sure you are online!</string>

    <!-- FRIENDS SYSTEM -->
    <string name='add_friend_button'>Add a friend</string>
    <string name='friends_button'>Friends</string>
    <string name='insert_friend_button'>Insert here</string>
...
