...
    android:layout_marginTop="9dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/rounded_rect">

    <!-- Country Icon -->
    <ImageView
        android:id="@+id/collected_country"
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:srcCompat="@drawable/temp_france"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/description_icon_country"/>

    <!-- Mountain name -->
    <TextView
        android:id="@+id/collected_name"
        style="@style/SmallText.DarkGreen"
        android:layout_width="220dp"
        android:layout_height="21dp"
        android:layout_marginTop="6dp"
        android:layout_marginStart="60dp"
        app:layout_constraintTop_toTopOf="parent"
...
