...
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/description_icon_avatar"/>

    <!-- challenge name -->
    <TextView
        android:id="@+id/challenge_name"
        style="@style/SmallText.DarkGreen"
        android:layout_width="220dp"
        android:layout_height="21dp"
        android:layout_marginTop="6dp"
        android:layout_marginStart="60dp"
        app:layout_constraintTop_toTopOf="parent"
...
